<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="es.ulpgc.eite.android.quiz.QuizView"
    tools:showIn="@layout/activity_question">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_vertical_margin"
            android:layout_weight="1"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Label"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:gravity="center_horizontal"
                android:id="@+id/labelQuestion"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_vertical_margin"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <Button
                    android:text="Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonTrue"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

                <Space
                    android:layout_width="@dimen/activity_horizontal_margin"
                    android:layout_height="wrap_content"/>

                <Button
                    android:text="Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonFalse"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_vertical_margin"/>

            <TextView
                android:text="Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/labelAnswer"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textAlignment="center"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:text="Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonCheat"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:text="Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonNext"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>
